deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-app
  namespace: default
  labels:
    app: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: "laacr.azurecr.io/mcasatyakumar/helloworld:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
